--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
       </footer>
     </main>
 
-    <script type="module" src="app.js"></script>
+    <script type="module" src="app.js?v=2"></script>
   </body>
 </html>
