--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
       <section class="stage">
         <video id="inputVideo" class="mirror" autoplay playsinline></video>
-        <canvas id="outputCanvas"></canvas>
+        <canvas id="outputCanvas" class="mirror"></canvas>
       </section>
 
       <footer class="footer">
