--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       </footer>
     </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/hands/hands.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@mediapipe/drawing_utils/drawing_utils.js"></script>
-    <script src="app.js?v=4"></script>
+    <script defer src="https://unpkg.com/@mediapipe/hands@0.4.1646424915/hands.js"></script>
+    <script defer src="https://unpkg.com/@mediapipe/drawing_utils@0.3.1620248257/drawing_utils.js"></script>
+    <script defer src="app.js?v=5"></script>
   </body>
 </html>
